--- a/compose.yaml
+++ b/compose.yaml
@@ -9,11 +9,31 @@ services:
       - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - phone-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U admin -d phone-device"]
       interval: 10s
       timeout: 5s
       retries: 5
 
+  app:
+    build: .
+    ports:
+      - '8080:8080'
+    environment:
+      - 'SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/phone-device'
+      - 'SPRING_DATASOURCE_USERNAME=admin'
+      - 'SPRING_DATASOURCE_PASSWORD=admin'
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - phone-network
+
 volumes:
   postgres_data:
+
+networks:
+  phone-network:
+    driver: bridge
