--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,9 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
+
+##Test Config
+##spring.datasource.url=jdbc:tc:postgresql:16:///testdb
+##spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
+##spring.jpa.hibernate.ddl-auto=create-drop
+##spring.flyway.enabled=false
